# 3DGS-Digital-Twin

./: .gitmodules  README.md  pipeline.py  requirements.txt
configs/: default.yaml
ros2_ws/mtc_controller_final/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/mtc_controller_final/install/include/mtc_dynamic/: collectEnvDemo_parameters.hpp  pick_place_demo_parameters.hpp
ros2_ws/mtc_controller_final/install/lib/mtc_dynamic/: collectEnvDemo  pick_place_demo
ros2_ws/mtc_controller_final/install/share/mtc_dynamic/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/mtc_controller_final/install/share/mtc_dynamic/cmake/: mtc_dynamicConfig.cmake
ros2_ws/mtc_controller_final/install/share/mtc_dynamic/launch/: demo.launch.py
ros2_ws/mtc_controller_final/src/: CMakeLists.txt
ros2_ws/mtc_controller_final/src/config/: gripper_moveit_controllers.yaml  octomap.yaml  panda_config.yaml
ros2_ws/mtc_controller_final/src/include/mtc_dynamic/: geometry_utils.h  pick_place_task.h
ros2_ws/mtc_controller_final/src/launch/: real_robot_moveit.launch.py  run.launch.py
ros2_ws/mtc_controller_final/src/src/: collectEnvDemo.cpp  collectEnvDemo_parameters.yaml  collectEnvTask.cpp  geometry_utils.cpp  pick_place_demo.cpp  pick_place_demo_parameters.yaml  pick_place_task.cpp
ros2_ws/mtc_controller_final/src/test/: pick_place_test.cpp
src/geometry_refinement/: __init__.py  dbscan_clean.py  filter.py  meshing.py
src/semantic_fusion/: __init__.py  fusion.py
src/semantic_segmentation/: __init__.py  sam_segmentation.py
